// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render ExpenseSummary with 1 expense 1`] = `
<p>
  Viewing 
  1
   
  expense
   totalling $
  2.00
</p>
`;

exports[`it should render ExpenseSummary with multiple expenses 1`] = `
<p>
  Viewing 
  3
   
  expenses
   totalling $
  2.00
</p>
`;
